*** Changelog ***
= 1.3.2 - 2019-02-27 =
* Add - Now cart items will be restored after successful wallet top-up.
* Fix - Partial payment issues.
* Fix - Cashback calculation for variable product.
* Fix - Transaction date issue.
* Fix - Order by balance column in WooWallet balance details table.
* Tweak - Cashback logic.

= 1.3.1 - 2019-02-04 =
* Fix - Cashback issue.

= 1.3.0 - 2019-02-02 = 
* Add - Now cashback will be credited if admin create order for customer.
* Add - Added wallet top-up widget.
* Fix - Disable partial payment if user balance is zero.
* Fix - Multiple ajax call for partial payment.
* Fix - Delete transaction records upon deletion of user.
* Tweak - Daily visit.

= 1.2.9 - 2019-01-08 =
* Add - Support for WooCommerce Multivendor Marketplace by WC Lovers.
* Fix - Daily visit credit with transient.
* Add - Support for multiple subscriptions.

= 1.2.8 - 2018-12-19 =
* Fix - Datatable responsive issue.
* Add - WP 5.0 compatibility.

= 1.2.7 - 2018-11-08 =
* Fix - Cache issue for WP multisite.
* Fix - Translation issue.
* Fix - Partial payment amount calculation when cash-back coupon applied.
* Fix - User details page issue.
* Fix - Role checking issue.
* Fix - Email parameters.

= 1.2.6 - 2018-10-09 =
* Add - Admin now can set rechargeable product image via settings page.
* Add - Partial payment amount refund option.
* Add - Wallet icon at WooCommerce my-account menu.
* Add - Exclude role option for daily visit action.
* Fix - WPCS updates and code cleanup for easier readability #20.
* Fix - Order total amount for partial payment.

= 1.2.5 - 2018-09-27 =
* Fix - Resolved performance issue.
* Add - Wallet REST API with WooCommerce endpoint.
* Dev - Removed WOO_WALLET_ICON constant.

= 1.2.4 - 2018-09-24 =
* Fix - Fatal error on WordPress Menu page.
* Fix - Hide partial payment option for guest user.
* Fix - Remaining balance display at email template.

= 1.2.3 -2018-09-24 =
* Fix- Partial payment.
* Fix - Dokan withdrawal.